--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "iReporter application provides a platform that can be used to report corruption or observation. Users can anonymously submit new reports, review existing reports, include location and track the status of problems of observations they have reported.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:@babel/register src/test/redFlag-test.js || true",
-    "build": "babel src --out-dir build",
-    "start": "nodemon --exec babel-node ./src/server.js --env",
+    "test": "mocha --require babel-register src/test/redFlag-test.js || true",
+    "start": "nodemon src/server.js --exec babel-node",
+    "build": "babel src -d build",
+    "serve": "node build/server.js",
     "deploy": "gh-pages -d UI"
   },
   "repository": {
@@ -25,25 +26,21 @@
     "npm": "6.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "gh-pages": "^2.0.1",
     "moment": "^2.22.2",
-    "nodemon": "^1.18.7",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/register": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-watch": "^2.0.7",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "eslint": "^5.9.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.7"
   }
 }
