--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js: 
-  - "stable"
-cache:
-  directories:
-    - "node_modules"
+  - "node"
+after_success:
+ - npm run coverage
 
