--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "babel src -d dist",
     "serve": "node dist/server.js",
     "test": "nyc mocha --require babel-register test/redFlag-test.js --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register test/*.js --timeout 600000 --exit",
+   "coveralls": "npm run coverage -- --report lcovonly && cat coverage/lcov.info | coveralls",
     "deploy": "gh-pages -d UI"
   },
   "repository": {
@@ -39,8 +40,10 @@
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.9.0",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.7",
     "nyc": "^13.1.0"
   }
