[#162495503] set up database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://femitj:yankee123@127.0.0.1:5432/myireporter_db
+DATABASE_URL=postgres://femitj:yankee123@127.0.0.1:5432/reporter_db
 SECRET=justanother
