--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "npm": "6.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "gh-pages": "^2.0.1",
+    "jsonwebtoken": "^8.4.0",
     "make-runnable": "^1.3.6",
     "moment": "^2.22.2",
     "pg": "^7.7.1",
